[package]
name = "axum-request-timeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
futures = "0.3.28"
hyper = "0.14.26"
tokio = { version = "1.28", features = [
    "macros",
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "fs",
    "sync",
    "signal",
] }
tower = { version = "0.4.13", features = ["timeout"] }
